# rs-streams

./: Cargo.toml  README.md
src/: file.rs  lib.rs  memorystream.rs
